--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -2,8 +2,8 @@ header {
 	background-color: white;
 	height: 70px;
 	width: 100%;
-	border bottom: 1px #CCCCCC;
-	background position: 20px 50%;
+	border-bottom: 1px #CCCCCC;
+	background-position: 20px 50%;
 	background-image: url(../images/logo.png);
 	background-repeat: no-repeat;
 }
